# pdf2md

./: .gitignore  BATCH_PROCESSING_IMPROVEMENTS.md  BUILD_GUIDE.md  CACHE_CHECK_FIX.md  FINAL_STOP_FUNCTION_SUMMARY.md  GUI_FEATURES_SUMMARY.md  GUI_STARTUP_GUIDE.md  GUI_TEST_SUMMARY.md  ISSUE_RESOLUTION_SUMMARY.md  MEMORY_OPTIMIZATION_GUIDE.md  MODEL_CACHE_GUIDE.md  NEXT_STEPS_GUIDE.md  PROCESSING_FEATURES_SUMMARY.md  PROCESSING_SETTINGS.md  PROJECT_FINAL_SUMMARY.md  PROJECT_STATUS_FINAL.md  README.md  SHUTDOWN_FEATURE_GUIDE.md  STOP_FUNCTION_GUIDE.md  STOP_FUNCTION_STATUS.md  THEME_SWITCH_FIX.md  USER_GUIDE.md  UV_RUNNING_GUIDE.md  analyze_mineru_pdfium.py  basic_tkinter_test.py  build_executable.py  build_requirements.txt  comprehensive_gui_test.py  config.yaml  create_test_pdf.py  debug_gui_issue.py  demo_cache_check.py  diagnose_gui.py  enhanced_batch_processor.py  enhanced_cache_manager.py  enhanced_stop_functionality.py  fix_batch_conversion.py  fix_mineru_imports.py  fix_pdf_loading_issue.py  fix_stop_conversion.py  (+42 more)
pdf2md/: __init__.py  advanced_processor.py  alternative_processor.py  batch_processor.py  cli_interface.py  concurrent_processor.py  config.py  error_handler.py  estimator.py  gui_interface.py  logger.py  main.py  mineru_wrapper.py  performance.py  pypdf_processor.py  shutdown.py  utils.py
strict_mineru_output/: strict_mineru_report.txt
test_simple/: simple_test.txt
tests/: test_config.py  test_estimator.py  test_main.py  test_shutdown.py
