[project]
name = "pdf2md"
version = "0.2.0"
description = "PDF to Markdown converter using mineru"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "mineru>=0.1.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.3",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
    "doclayout-yolo>=0.0.4",
    "ultralytics>=8.3.162",
    "rapid-table>=2.0.2",
    "fast-langdetect>=0.3.2",
    "openai>=1.93.0",
    "transformers>=4.53.1",
    "ftfy>=6.3.1",
    "dill>=0.4.0",
    "shapely>=2.1.1",
    "pyclipper>=1.3.0.post6",
    "rapidocr>=3.2.0",
    "rich>=13.0.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
pdf2md = "pdf2md.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
